--- a/style.css
+++ b/style.css
@@ -12,23 +12,28 @@ h1 {
     font-size:100px;
     font-weight:900px;
     margin-bottom: 0;
+    margin-top:0%;
     font-family:arial;
     background-color: teal;
-    text-align:right;
+    text-align:center;
+    letter-spacing: 25px;
+    padding: 18px;
+    text-decoration: underline overline;
+    text-underline-offset: 25%;
 }
 
 h2 {
-    text-decoration:line-through;
-    text-align:right; 
-    margin-top: 0;
+    text-align:center; 
+    margin-top:1%;
     
 }
 
-.center {
-    display:inline-block;
-    width:30%;
+img {
+    display:block;
+    width:28%;
     height:30%;
-    border-radius: 50%;
+    border-radius:50%;
+    margin-left:36%;
 }
 
 h3 {
@@ -38,30 +43,39 @@ h3 {
     font-size:larger;
     text-align:center;
     background-color: gold;
+    margin-top:0%;
 }    
 
 h4 {
-    text-align: left;
+    text-align: center;
     color:white;
     font-style: italic;
     font-size: small;
 }
 
-.layout {
+div {
+    float:left;
+    height:400px;
+    width:23%;
+    padding:0 10px;
+}
+
+#column1 {
     width: 300px;
     border: 10px dashed white;
     padding: 15px;
-    margin: 20px;
-    height: 400px;
-    float:left;
-    
+    margin-right:8%;
 }
 
-.child {
-    display:inline-block;
-    
+#column2 {
+    width: 300px;
+    border: 10px dashed white;
+    padding: 15px;
+    margin-right:6.8%;
 }
 
-.parent {
-    text-align:left;
+#column3 {
+    width: 300px;
+    border: 10px dashed white;
+    padding: 15px;
 }
